--- a/Models/FlowMatching/2025.10.09_IntMeanFlow.md
+++ b/Models/FlowMatching/2025.10.09_IntMeanFlow.md
@@ -93,3 +93,31 @@ Our contributions can be summarized as follows:
 
 -  We evaluate our method on two popular flow-based TTS models, achieving 1-NFE inference for token2mel and 3-NFE for text2mel tasks, while maintaining high-quality synthesis.
 \end{enumerate}
+
+## 2·Related Works
+
+\label{sec:related_works}
+
+### Distillation based on Direct Metric Optimization
+
+Consistency and shortcut models are commonly used to reduce NFE while maintaining output quality.
+
+However, applying these methods to text-to-speech (TTS) has shown limited success due to task differences.
+
+Notable exceptions, such as DMOSpeech[^Li2024Dmospeech] and DMOSpeech2[^Li2025DMOSpeech], reduce NFE in TTS through distillation and reinforcement learning.
+
+However, these methods rely on auxiliary models that complicate the training process, as well as a fixed time sampling schedule during distillation, which reduces flexibility during inference.
+
+In contrast, our approach eliminates the need for auxiliary models and additional loss functions.
+
+And we do not employ a fixed step sampling strategy during training, which simplifies the training process, and improves flexibility during inference.
+
+### MeanFlow
+
+MeanFlow introduces a framework for one-step generative modeling by defining average velocity as displacement over a time interval.
+
+Unlike Flow Matching, which models instantaneous velocity, MeanFlow focuses on learning average velocity and establishes an analytical relationship between average and instantaneous velocities through the MeanFlow Identity.
+
+This approach provides a clear training objective without relying on heuristic constraints, and it operates independently of score estimation, pretraining, or distillation.
+
+However, its dependence on Jacobian-vector products (JVPs) to compute the time derivative introduces computational overhead and limits scalability, especially with custom operators lacking JVP support.
