--- a/Models/FlowMatching/2025.10.09_IntMeanFlow.md
+++ b/Models/FlowMatching/2025.10.09_IntMeanFlow.md
@@ -121,3 +121,192 @@ Unlike Flow Matching, which models instantaneous velocity, MeanFlow focuses on l
 This approach provides a clear training objective without relying on heuristic constraints, and it operates independently of score estimation, pretraining, or distillation.
 
 However, its dependence on Jacobian-vector products (JVPs) to compute the time derivative introduces computational overhead and limits scalability, especially with custom operators lacking JVP support.
+
+## 3·Methodology
+
+\label{sec:methodology}
+
+### IntMeanFlow: MeanFlow Distillation via Integral Velocity
+
+IntMeanFlow extends the principles of MeanFlow by focusing on learning the averaged velocity over a time interval, rather than the instantaneous velocity at individual time steps.
+
+This approach retains the coarse-to-fine nature of MeanFlow, where smaller intervals are emphasized during training to capture fine-grained details, while broader temporal dynamics are learned more gradually.
+
+In the distillation process, the student model is guided by a flow-matching teacher model.
+
+The teacher model transforms an initial distribution \( p_0 \) (e.g., Gaussian noise) into a target distribution \( p_1 \) using a time-dependent vector field \( v(z_t, t; \theta) \).
+
+The state evolution \( z_t \) is governed by the following ordinary differential equation (ODE):
+
+$$
+\frac{d}{dt} z_t = v(z_t, t; \theta), \quad z_0 \sim p_0, \quad z_1 \sim p_1, \quad t \in [0, 1]
+$$
+
+The teacher’s loss function is given by:
+
+$$
+
+L_{\text{CFM}} = \mathbb{E}_{t, p_0(z_0), q(z_1)} \left[ \left\| v(z_t, t; \theta) - (z_1 - z_0) \right\|^2 \right]
+$$
+
+While the teacher learns to model the instantaneous velocity \( v(z_t, t; \theta) \), the student model is tasked with learning the averaged velocity over a time interval \( [t, r] \), defined as:
+
+$$
+\bar{v}(z_t, t, r) = \frac{z_r - z_t}{r - t}
+$$
+
+where \( z_t \) and \( z_r \) are the states of the system at times \( t \) and \( r \), respectively. \( z_r \) is computed iteratively during inference as described below, and is not a direct parameter of the velocity function \( v \).
+
+The student model is trained to approximate this averaged velocity using the teacher’s instantaneous velocity.
+
+To achieve this, we perform iterative sampling during distillation.
+
+The interval \( [t, r] \) is discretized into \( n \) subintervals, with time steps \( t_0 = t, t_1, \dots, t_n = r \).
+
+At each step, the teacher model evolves the state according to the discrete approximation of the ODE:
+
+$$
+\label{eq:iterative-sampling}
+z_{t_{k+1}} = z_{t_k} + (t_{k+1} - t_k) \cdot v(z_{t_k}, t_k; \theta)
+$$
+
+where \( t_0 = t \), \( t_n = r \), and \( t_1, t_2, \dots, t_{n-1} \) are intermediate time steps.
+
+The total displacement over the interval \( [t, r] \) is given by:
+
+$$
+\Delta z^{\text{teacher}} = \sum_{k=0}^{n-1} \left( z_{t_{k+1}} - z_{t_k} \right) = \sum_{k=0}^{n-1} (t_{k+1} - t_k) \cdot v(z_{t_k}, t_k; \theta)
+$$
+
+This discrete displacement approximates the integral of the instantaneous velocity \( v(z_t, t; \theta) \) over \( [t, r] \), which is the continuous process the student is aiming to model.
+
+To approximate the averaged velocity, the displacement is normalized by the interval length:
+
+$$
+\bar{v}_{\text{teacher}}(z_t, t, r) = \frac{\Delta z^{\text{teacher}}}{r - t}
+$$
+
+The continuous form of the averaged velocity is given by:
+
+$$
+\bar{v}(z_t, t, r) = \frac{1}{r - t} \int_t^r v(z_\tau, \tau; \theta) \, d\tau
+$$
+
+Thus, the teacher’s discrete displacement serves as a numerical approximation of this integral.
+
+Finally, the student model is trained to minimize the distillation loss:
+
+$$
+
+L_{\text{distill}} = \mathbb{E}_{t, r} \left[ \left\| u_{\text{student}}(z_t, t, r) - \bar{v}_{\text{teacher}}(z_t, t, r) \right\|^2 \right]
+$$
+
+where \( u_{\text{student}}(z_t, t, r) \) is the predicted velocity from the student model, and \( \bar{v}_{\text{teacher}}(z_t, t, r) \) is the target velocity from the teacher.
+
+The student model learns to predict the averaged velocity by following the teacher’s guidance, which approximates the integral of the instantaneous velocity via iterative sampling.
+
+> <a id="fig:placeholder">![](imgs/imf.pdf)</a>
+
+> Illustration of IntMeanFlow: The student model learns the averaged velocity from the instantaneous velocities provided by the teacher model at multiple states.
+
+\vspace{-2em}
+
+### Optimal Step Sampling Searching~(O3S)
+
+In flow-based speech generation, previous work has shown that denser sampling at noisier steps leads to improved speech quality[^Chen2024F5-TTS], [^Zheng2025Accelerating].
+
+To satisfy varying NFE requirements, earlier methods have used continuous functions or hard-coded discrete step schedules.
+
+However, instead of relying on a fixed schedule, this work optimizes the steps sampling specifically for each model's inference process.
+
+As shown in Fig.~[fig:o3s](#fig:o3s), we observe through experiments that speech quality, as a function of sampling step position, exhibits near-convex behavior.
+
+This finding motivates the introduction of the Optimal Sampling Step Search (O3S) algorithm, which optimizes the distribution of a fixed number of sampling steps across the inference interval \( [0, 1] \).
+
+The core idea behind O3S is to optimize the placement of each sampling step using ternary search.
+
+To achieve this, we fix all but one of the sampling steps and apply ternary search to optimize the remaining one.
+
+This process is repeated for each step, and the optimization continues until no further improvement is observed on a development set.
+
+O3S thus identifies the optimal distribution of sampling steps, enhancing speech quality without increasing NFE.
+
+The pipeline for O3S is outlined in Algorithm~[alg:o3s](#alg:o3s).
+
+The metric function \( \mathcal{L} \) takes a set of sampling steps \( T \) and a development set for inference, computing a pre-defined metric on the generated audio.
+
+In this work, we use speaker similarity as the metric.
+
+\begin{algorithm}[h]
+\caption{Optimal Step Sampling Search (O3S) Algorithm}
+\label{alg:o3s}
+
+\begin{algorithmic}[1]
+\State Uniformly initialize \( \mathbf{T_{best}} \gets \{t_0, t_1, \dots, t_n\} \) where \( t_i = \frac{i}{n} \) % \Comment{Initialize the sampling steps}
+\State Initialize best metric \(  \mathbf{m_{\text{best}}} \gets -\infty \), patience $p \gets 0$
+\State Define metric function $\mathcal{L}$
+
+\While{True}
+\For{ \( i \in \{n-1, n-2, \dots, 1\} \)}
+\State \( m_{\text{optim}}, T_{\text{optim}} \gets \text{TernarySearch}(\mathcal{L}, i, t_{i-1}, t_{i}) \) \Comment{find best placement for $t_i$ }
+\If{ $m_{\text{optim}} > m_{\text{best}}$ }
+\State \( T_{\text{best}}, m_{\text{best}} \gets T_{\text{optim}}, m_{\text{optim}}\)
+\State $p \gets 0$
+\Else
+\State $p \gets p+1$
+\If{ p = n}
+\State **Break**
+\EndIf
+\EndIf
+\EndFor
+\EndWhile
+\State **Return** $T_{\text{best}}, m_{\text{best}}$
+\end{algorithmic}
+
+\end{algorithm}
+
+\vspace{-1em}
+
+> <a id="fig:o3s">![](imgs/convex.pdf)</a>
+
+> When fixing all but one of the sampling steps, the speaker similarity metric exhibits near-convex behavior.
+
+### Initialization Strategy for IntMeanFlow
+
+To adapt flow-matching models to IntMeanFlow, we introduce an additional parameter \( r \).
+
+Both \( t \) and \( r \) are passed through the same embedding network, concatenated, and projected back to the feature space of \( t \) using a linear mapping \( \mathbf{W} \).
+
+Let the embeddings for \( t \) and \( r \) be \( \mathbf{e}_t = \mathcal{E}(t) \) and \( \mathbf{e}_r = \mathcal{E}(r) \).
+
+The concatenated and mapped embeddings $\mathbf{e}_{t,r}$, $\mathbf{e'}_{t,r}$ are:
+
+$$
+\mathbf{e}_{t, r} = [\mathbf{e}_t, \mathbf{e}_r]; \mathbf{e'}_{t,r} = \mathbf{W} \mathbf{e}_{t, r}
+$$
+
+To preserve the original model behavior, \( \mathbf{W} \) is initialized as:
+
+$$
+\mathbf{W} = 
+\begin{bmatrix}
+
+D_{diag} & 0 \end{bmatrix}
+
+$$
+
+where $D_{diag}$ indicates a diagonal matrix.
+
+This ensures the model to behave like the original model at initialization.
+
+<a id="tab:seedtts-test">Text2Mel results on Seed-TTS *test-en* and *test-zh*.
+
+Bold indicates the best result, underlined the second-best.
+
+All methods are based on F5-TTS.
+
+IMF stands for IntMeanFlow.
+
+Medium models have 592M parameters, base models 336M, and small models 158M.</a>
+
+<a id="tab:cosyvoice-librispeech-pc">Token2Mel Results on LibriSpeech-PC: RTF values are reported only for the flow module.</a>
