--- a/Models/FlowMatching/2025.10.09_IntMeanFlow.md
+++ b/Models/FlowMatching/2025.10.09_IntMeanFlow.md
@@ -310,3 +310,108 @@ IMF stands for IntMeanFlow.
 Medium models have 592M parameters, base models 336M, and small models 158M.</a>
 
 <a id="tab:cosyvoice-librispeech-pc">Token2Mel Results on LibriSpeech-PC: RTF values are reported only for the flow module.</a>
+
+## 4·Experiments
+
+\label{sec:experiments}
+\vspace{-1em}
+
+### Experiment Setup
+
+We conduct experiments based on F5-TTS for the text2mel task and CosyVoice2 for the token2mel task.
+
+During distillation with IntMeanFlow, the student model learns the vector field from the teacher with classifier-free guidance (CFG)[^Ho2021Classifier-Free], while the student avoids using CFG during training to reduce inference overhead.
+
+For F5-TTS, we use the SeedTTS test set[^Anastassiou2024Seed-TTS]\footnote{\url{https://github.com/BytedanceSpeech/seed-tts-eval}}; for CosyVoice2, we use the LibriSpeech-PC test set[^Meister2023Librispeech-Pc].
+
+Performance is evaluated on a cross-sentence task using a variety of metrics.
+
+For objective evaluation, we report Word Error Rate (WER) and SIM-o (speaker similarity).
+
+WER is computed using Whisperlarge-v3 for English transcription and Paraformer-zh[^Gao2022Paraformer] for Chinese transcription.
+
+For SIM-o, we extract speaker embeddings using a WavLM-based[^Chen2022Wavlm] speaker verification model and compute the cosine similarity between synthesized and prompt human speech.
+
+Real-time factors(RTF) are measured on NVIDIA A100 GPU.
+
+For CMOS, speech quality is rated from 3 (worse) to + 3 (better) compared to human reference.
+
+For SMOS, similarity between synthesized and prompt speech is rated on a 1–5 scale, with higher scores indicating better quality.
+
+Additionally, we report UTMOS[^Saeki2022Utmos] scores, which are evaluated using an open-source MOS prediction model.
+
+To complement UTMOS, we also apply the recent Uni-Versa-Ext (UV.MOS)[^Wang2025Improving], which has demonstrated a high correlation with human-provided MOS scores~\footnote{\url{https://huggingface.co/vvwangvv/universa-ext_wavlm-base_5metric}}.
+\vspace{-1em}
+
+### Results on Text2Mel Task
+
+F5-TTS maps text embeddings to mel spectrograms in the text2mel task using a diffusion transformer.
+
+Following [^Chen2024F5-TTS], We train small models on the LibriTTS[^Zen2019LibriTTS] dataset and base and medium models on the processed 95k-hour Emilia[^He2024Emilia] dataset.
+
+Teachers' inference has a CFG rate of 3.0 while student does not apply CFG during inference.
+
+Experimental results, shown in Table~[tab:seedtts-test](#tab:seedtts-test), demonstrate that distillation with IntMeanFlow significantly improves NFE and RTF, with only a slight compromise in performance.
+
+The relationship between NFE and speech quality are illustrated in Fig.~[fig:nfe](#fig:nfe).
+
+We do not compare with MeanFlow for the text2mel task, as F5-TTS requires training with a batch size of 1 due to JVP overhead.
+
+Performance of MeanFlow is discussed in Section~[sec:token2mel](#sec:token2mel).
+
+> <a id="fig:nfe">![](imgs/NFE.pdf)</a>
+
+> NFE vs.
+> 
+> WER (\%) and SIM-o for the Flow Matching teacher and IntMeanFlow student models
+
+#### Effectiveness of the O3S Algorithm
+
+The comparison between lines 6 and 7 on *test-en* and lines 16 and 17 on *test-zh* demonstrates the effectiveness of applying the sampling steps optimized by O3S.
+
+O3S consistently leads to improvements in both subjective and objective metrics by a large margin.
+
+#### Impact of Teacher NFE on Training Time and Performance
+
+Using a larger teacher NFE during distillation can significantly increase training time, as shown in Table~[tab:train_time](#tab:train_time).
+
+To examine the trade-off between teacher NFE and student performance, we conduct ablation experiments.
+
+A comparison of lines 10, 11, and 12 on *test-en*, and lines 18, 19, and 20 on *test-zh*, reveals that while a smaller teacher NFE results in minimal degradation in subjective metrics, objective metrics show noticeable performance loss, which is a common challenge in TTS evaluation.
+
+Synthesized speech from lines 10 and 20 demonstrates unnatural pronunciation and degraded fluency due to the excessively small teacher NFE.
+\vspace{-1em}
+
+<a id="tab:train_time">Teacher NFE and training time per step</a>
+
+#### Impact of Teacher Size on Student Performance
+
+The size of the teacher model does not affect the inference efficiency of the student model.
+
+Therefore, we examine whether a larger teacher can improve student performance, particularly when paired with a smaller, more practically efficient student model.
+
+Comparing lines 11 and 12, we observe that increasing the teacher's size leads to improvements in both objective and subjective metrics for the student.
+
+These improvements significantly surpass the baseline performance reported in line 4.
+
+\vspace{-1em}
+
+### Results on Token2Mel Task
+
+\vspace{-.5em}
+\label{sec:token2mel}
+
+In this experiment, we use the CosyVoice 2 architecture for flow-based speech generation.
+
+Unlike F5-TTS, where the flow operates on raw text embeddings, the flow in CosyVoice 2 processes time-aligned semantics, simplifying the task and enabling 1-NFE inference after distillation.
+
+We perform distillation using the default model configuration from the official repository\footnote{\url{https://github.com/FunAudioLLM/CosyVoice}}
+and its pre-trained checkpoint as the teacher model.
+
+Since CosyVoice 2 is trained on a proprietary dataset that is unavailable to us, we use LibriTTS for distillation.
+
+The vanilla MeanFlow model, as shown in line 18, yields good WER and SIM-o results but leads to degraded speech quality in both neural and human MOS evaluations, likely due to the absence of a teacher model and instability in the training process.
+
+The results in line 9 demonstrate that IntMeanFlow effectively distills the teacher’s capabilities while reducing NFE, even when trained on a significantly smaller dataset.
+
+\vspace{-1em}
