--- a/Models/FlowMatching/2025.10.09_IntMeanFlow.md
+++ b/Models/FlowMatching/2025.10.09_IntMeanFlow.md
@@ -35,15 +35,15 @@ Demo samples are [available](https://vvwangvv.github.io/intmeanflow/).
 
 ## 1·Introduction
 
-Text-to-speech (TTS) generation has made significant progress in recent years, with models achieving near-human-level, zero-shot synthesis capabilities[^Du2024CosyVoice], [^Du2025CosyVoice3], [^Chen2024F5-TTS], [^Casanova2024XTTS], [^Casanova2021YourTTS], [^Anastassiou2024Seed-TTS], [^Zhu2025ZipVoice].
-The rise of flow-based generative models[^Lipman2022FM] has contributed to this advancement, offering promising results across various fields, including image synthesis[^Albergo2022InterFlow], [^Liu2022RectifiedFlow], video[^Jin2024PyramidalFM] and music generation[^Prajwal2024MusicFlow].
+Text-to-speech (TTS) generation has made significant progress in recent years, with models achieving near-human-level, zero-shot synthesis capabilities (**CosyVoice2**[^Du2024CosyVoice2], **CosyVoice3**[^Du2025CosyVoice3], **F5-TTS**[^Chen2024F5-TTS], **XTTS**[^Casanova2024XTTS], **YourTTS**[^Casanova2021YourTTS], **Seed-TTS**[^Anastassiou2024Seed-TTS], **ZipVoice**[^Zhu2025ZipVoice]).
+The rise of flow-based generative models (**Flow Matching**[^Lipman2022FM]) has contributed to this advancement, offering promising results across various fields, including image synthesis (**InterFlow**[^Albergo2022InterFlow], **RectifiedFlow**[^Liu2022RectifiedFlow]), video (****PyramidalFM**[^Jin2024PyramidalFM]) and music generation (**MusicFlow**[^Prajwal2024MusicFlow]).
 These models learn to map data distributions to a latent space, enabling high-quality generation.
 However, flow-based models often face a trade-off between sampling quality and efficiency, as their iterative sampling process can lead to slow inference and high computational costs.
-To address this, recent efforts in the image domain, such as consistency models[^Liu2024AudioLCM], [^Fei2024MusicCM], [^Song2023CM], [^Lu2024sCM], [^Heek2024MultiStepCM], [^Peng2025FACM] and shortcut models[^Frans2024ShortcutModel], have been proposed to reduce the number of function evaluations~(NFE) while maintaining high-quality generation results.
+To address this, recent efforts in the image domain, such as consistency models (**AudioLCM**[^Liu2024AudioLCM], **MusicCM**[^Fei2024MusicCM], **CM**[^Song2023CM], **sCM**[^Lu2024sCM], **MultiStepCM**[^Heek2024MultiStepCM], **FACM**[^Peng2025FACM]) and **Shortcut Models**[^Frans2024ShortcutModel], have been proposed to reduce the number of function evaluations~(NFE) while maintaining high-quality generation results.
 
-Among these approaches, MeanFlow[^Geng2025MeanFlow] has emerged as a promising solution to the trade-off between sampling quality and efficiency.
+Among these approaches, **MeanFlow**[^Geng2025MeanFlow] has emerged as a promising solution to the trade-off between sampling quality and efficiency.
 By modeling averaged velocity instead of instantaneous velocity, MeanFlow enables more efficient sampling without compromising output quality.
-While it has shown success in image generation and audio generation[^Li2025MeanAudio], applying MeanFlow to TTS introduces several challenges.
+While it has shown success in image generation and audio generation (**MeanAudio**[^Li2025MeanAudio]), applying MeanFlow to TTS introduces several challenges.
 First, the training process of MeanFlow relies on a self-bootstrap mechanism, which requires mixing with instantaneous velocity guidance similar to flow matching.
 The strength of this guidance can significantly impact model performance, and without it, the model is prone to collapse.
 Second, MeanFlow involves the Jacobian-vector product (JVP), a computationally intensive operation that consumes substantial GPU memory.
@@ -60,7 +60,7 @@ Additionally, based on the empirical observation that denser sampling near noisi
 O3S automatically identifies model-specific near-optimal sampling steps, using a customizable quality metric and a ternary search algorithm.
 This improves the generation quality without introducing additional inference overhead.
 
-We conduct experiments on models from two widely used approaches in flow-based TTS: (1) CosyVoice2[^Du2024CosyVoice], which integrates a language model (LM) followed by a flow model converting time-aligned tokens into mel-spectrograms (token2mel), and (2) F5-TTS[^Chen2024F5-TTS], where a flow model directly converts raw text embeddings into mel-spectrograms (text2mel), learning time alignment inherently.
+We conduct experiments on models from two widely used approaches in flow-based TTS: (1) **CosyVoice2**[^Du2024CosyVoice2], which integrates a language model (LM) followed by a flow model converting time-aligned tokens into mel-spectrograms (token2mel), and (2) **F5-TTS**[^Chen2024F5-TTS], where a flow model directly converts raw text embeddings into mel-spectrograms (text2mel), learning time alignment inherently.
 Experimental results show that IntMeanFlow achieves 1-NFE inference for the token2mel task in CosyVoice2 and 3-NFE for the text2mel task in F5-TTS, maintaining high-quality synthesis.
 
 Our contributions can be summarized as follows:
@@ -74,7 +74,7 @@ Our contributions can be summarized as follows:
 
 Consistency and shortcut models are commonly used to reduce NFE while maintaining output quality.
 However, applying these methods to text-to-speech (TTS) has shown limited success due to task differences.
-Notable exceptions, such as DMOSpeech[^Li2024DMOSpeech] and DMOSpeech2[^Li2025DMOSpeech2], reduce NFE in TTS through distillation and reinforcement learning.
+Notable exceptions, such as **DMOSpeech**[^Li2024DMOSpeech] and **DMOSpeech2**[^Li2025DMOSpeech2], reduce NFE in TTS through distillation and reinforcement learning.
 However, these methods rely on auxiliary models that complicate the training process, as well as a fixed time sampling schedule during distillation, which reduces flexibility during inference.
 In contrast, our approach eliminates the need for auxiliary models and additional loss functions.
 And we do not employ a fixed step sampling strategy during training, which simplifies the training process, and improves flexibility during inference.
@@ -158,7 +158,7 @@ The student model learns to predict the averaged velocity by following the teach
 
 ### Optimal Step Sampling Searching~(O3S)
 
-In flow-based speech generation, previous work has shown that denser sampling at noisier steps leads to improved speech quality[^Chen2024F5-TTS], [^Zheng2025FastF5-TTS].
+In flow-based speech generation, previous work has shown that denser sampling at noisier steps leads to improved speech quality (**F5-TTS**[^Chen2024F5-TTS], **Fast F5-TTS**[^Zheng2025FastF5-TTS]).
 To satisfy varying NFE requirements, earlier methods have used continuous functions or hard-coded discrete step schedules.
 However, instead of relying on a fixed schedule, this work optimizes the steps sampling specifically for each model's inference process.
 As shown in Fig.~[fig:o3s](#fig:o3s), we observe through experiments that speech quality, as a function of sampling step position, exhibits near-convex behavior.
@@ -215,23 +215,23 @@ This ensures the model to behave like the original model at initialization.
 ### Experiment Setup
 
 We conduct experiments based on F5-TTS for the text2mel task and CosyVoice2 for the token2mel task.
-During distillation with IntMeanFlow, the student model learns the vector field from the teacher with classifier-free guidance (CFG)[^Ho2022CFG], while the student avoids using CFG during training to reduce inference overhead.
-For F5-TTS, we use the SeedTTS test set[^Anastassiou2024Seed-TTS]\footnote{\url{https://github.com/BytedanceSpeech/seed-tts-eval}}; for CosyVoice2, we use the LibriSpeech-PC test set[^Meister2023LibriSpeech-PC].
+During distillation with IntMeanFlow, the student model learns the vector field from the teacher with **classifier-free guidance (CFG)**[^Ho2022CFG], while the student avoids using CFG during training to reduce inference overhead.
+For F5-TTS, we use the **Seed-TTS**[^Anastassiou2024Seed-TTS] test set ([Github](https://github.com/BytedanceSpeech/seed-tts-eval)); for CosyVoice2, we use the **LibriSpeech-PC**[^Meister2023LibriSpeech-PC] test set.
 
 Performance is evaluated on a cross-sentence task using a variety of metrics.
 For objective evaluation, we report Word Error Rate (WER) and SIM-o (speaker similarity).
-WER is computed using Whisperlarge-v3 for English transcription and Paraformer-zh[^Gao2022Paraformer] for Chinese transcription.
-For SIM-o, we extract speaker embeddings using a WavLM-based[^Chen2021WavLM] speaker verification model and compute the cosine similarity between synthesized and prompt human speech.
+WER is computed using Whisperlarge-v3 for English transcription and **Paraformer**-zh[^Gao2022Paraformer] for Chinese transcription.
+For SIM-o, we extract speaker embeddings using a **WavLM**-based[^Chen2021WavLM] speaker verification model and compute the cosine similarity between synthesized and prompt human speech.
 Real-time factors(RTF) are measured on NVIDIA A100 GPU.
 For CMOS, speech quality is rated from 3 (worse) to + 3 (better) compared to human reference.
 For SMOS, similarity between synthesized and prompt speech is rated on a 1–5 scale, with higher scores indicating better quality.
-Additionally, we report UTMOS[^Saeki2022UTMOS] scores, which are evaluated using an open-source MOS prediction model.
-To complement UTMOS, we also apply the recent Uni-Versa-Ext (UV.MOS)[^Wang2025Uni-VERSA-Ext], which has demonstrated a high correlation with human-provided MOS scores~\footnote{\url{https://huggingface.co/vvwangvv/universa-ext_wavlm-base_5metric}}.
+Additionally, we report **UTMOS**[^Saeki2022UTMOS] scores, which are evaluated using an open-source MOS prediction model.
+To complement UTMOS, we also apply the recent **Uni-Versa-Ext** (UV.MOS)[^Wang2025Uni-VERSA-Ext], which has demonstrated a high correlation with human-provided MOS scores ([Github](https://huggingface.co/vvwangvv/universa-ext_wavlm-base_5metric)).
 
 ### Results on Text2Mel Task
 
 F5-TTS maps text embeddings to mel spectrograms in the text2mel task using a diffusion transformer.
-Following [^Chen2024F5-TTS], We train small models on the LibriTTS[^Zen2019LibriTTS] dataset and base and medium models on the processed 95k-hour Emilia[^He2024Emilia] dataset.
+Following**F5-TTS**[^Chen2024F5-TTS], We train small models on the **LibriTTS**[^Zen2019LibriTTS] dataset and base and medium models on the processed 95k-hour **Emilia**[^He2024Emilia] dataset.
 Teachers' inference has a CFG rate of 3.0 while student does not apply CFG during inference.
 Experimental results, shown in Table~[tab:seedtts-test](#tab:seedtts-test), demonstrate that distillation with IntMeanFlow significantly improves NFE and RTF, with only a slight compromise in performance.
 The relationship between NFE and speech quality are illustrated in Fig.~[fig:nfe](#fig:nfe).
@@ -285,7 +285,7 @@ Additionally, we propose an efficient initialization strategy that facilitates t
 
 ## References
 
-[^Du2024CosyVoice]: [**CosyVoice**: A Scalable Multilingual Zero-shot Text-to-speech Synthesizer based on Supervised Semantic Tokens](../SpeechLM_TTS/2024.07.07_CosyVoice.md). ArXiv:2407.05407v2.
+[^Du2024CosyVoice2]: [**CosyVoice2**: Scalable Streaming Speech Synthesis with Large Language Models](../SpeechLM_TTS/2024.12.13_CosyVoice2.md). ArXiv:2412.10117v3.
 [^Du2025CosyVoice3]: [**CosyVoice3**: Towards In-the-wild Speech Generation via Scaling-Up and Post-training](../SpeechLM_TTS/2025.05.23_CosyVoice3.md). ArXiv:2505.17589v2.
 [^Chen2024F5-TTS]: [**F5-TTS**: A Fairytaler that Fakes Fluent and Faithful Speech with Flow Matching](2024.10.09_F5-TTS.md). ArXiv:2410.06885v3.
 [^Casanova2024XTTS]: [**XTTS**: A Massively Multilingual Zero-Shot Text-to-Speech Model](../SpeechLM_TTS/2024.06.07_XTTS.md). ArXiv:2406.04904v1.
