--- a/Models/FlowMatching/2025.10.09_IntMeanFlow.md
+++ b/Models/FlowMatching/2025.10.09_IntMeanFlow.md
@@ -161,7 +161,7 @@ The student model learns to predict the averaged velocity by following the teach
 In flow-based speech generation, previous work has shown that denser sampling at noisier steps leads to improved speech quality (**F5-TTS**[^Chen2024F5-TTS], **Fast F5-TTS**[^Zheng2025FastF5-TTS]).
 To satisfy varying NFE requirements, earlier methods have used continuous functions or hard-coded discrete step schedules.
 However, instead of relying on a fixed schedule, this work optimizes the steps sampling specifically for each model's inference process.
-As shown in Fig.~[fig:o3s](#fig:o3s), we observe through experiments that speech quality, as a function of sampling step position, exhibits near-convex behavior.
+As shown in [Fig.02](#fig:o3s), we observe through experiments that speech quality, as a function of sampling step position, exhibits near-convex behavior.
 This finding motivates the introduction of the Optimal Sampling Step Search (O3S) algorithm, which optimizes the distribution of a fixed number of sampling steps across the inference interval $[0, 1]$.
 
 The core idea behind O3S is to optimize the placement of each sampling step using ternary search.
@@ -169,11 +169,11 @@ To achieve this, we fix all but one of the sampling steps and apply ternary sear
 This process is repeated for each step, and the optimization continues until no further improvement is observed on a development set.
 O3S thus identifies the optimal distribution of sampling steps, enhancing speech quality without increasing NFE.
 
-The pipeline for O3S is outlined in Algorithm~[alg:o3s](#alg:o3s).
+The pipeline for O3S is outlined in [Algorithm.01](#alg:o3s).
 The metric function $\mathcal{L}$ takes a set of sampling steps $T$ and a development set for inference, computing a pre-defined metric on the generated audio.
 In this work, we use speaker similarity as the metric.
 
-> <a id="alg:o3s"></a>
+> <a id="alg:o3s">![](Images/2025.10.09_IntMeanFlow_Algo.01.png)</a>
 >
 > Alg.01: Optimal Step Sampling Search (O3S) Algorithm.
 
@@ -200,16 +200,6 @@ $$
 where $D_{diag}$ indicates a diagonal matrix.
 This ensures the model to behave like the original model at initialization.
 
-> <a id="tab:seedtts-test"></a>
-> Tab.01: Text2Mel results on Seed-TTS *test-en* and *test-zh*.
-> Bold indicates the best result, underlined the second-best.
-> All methods are based on F5-TTS.
-> IMF stands for ***IntMeanFlow***.
-> Medium models have 592M parameters, base models 336M, and small models 158M.
-
-> <a id="tab:cosyvoice-librispeech-pc"></a>
-> Tab.02: Token2Mel Results on LibriSpeech-PC: RTF values are reported only for the flow module.
-
 ## 4·Experiments
 
 ### Experiment Setup
@@ -233,14 +223,25 @@ To complement UTMOS, we also apply the recent **Uni-Versa-Ext** (UV.MOS)[^Wang20
 F5-TTS maps text embeddings to mel spectrograms in the text2mel task using a diffusion transformer.
 Following **F5-TTS**[^Chen2024F5-TTS], We train small models on the **LibriTTS**[^Zen2019LibriTTS] dataset and base and medium models on the processed 95k-hour **Emilia**[^He2024Emilia] dataset.
 Teachers' inference has a CFG rate of 3.0 while student does not apply CFG during inference.
-Experimental results, shown in Table~[tab:seedtts-test](#tab:seedtts-test), demonstrate that distillation with ***IntMeanFlow*** significantly improves NFE and RTF, with only a slight compromise in performance.
-The relationship between NFE and speech quality are illustrated in Fig.~[fig:nfe](#fig:nfe).
+Experimental results, shown in [Tab.01](#tab:seedtts-test), demonstrate that distillation with ***IntMeanFlow*** significantly improves NFE and RTF, with only a slight compromise in performance.
+
+> <a id="tab:seedtts-test"></a>
+> Tab.01: Text2Mel results on Seed-TTS *test-en* and *test-zh*.
+> Bold indicates the best result, underlined the second-best.
+> All methods are based on F5-TTS.
+> IMF stands for ***IntMeanFlow***.
+> Medium models have 592M parameters, base models 336M, and small models 158M.
+
+> <a id="tab:cosyvoice-librispeech-pc"></a>
+> Tab.02: Token2Mel Results on LibriSpeech-PC: RTF values are reported only for the flow module.
+
+The relationship between NFE and speech quality are illustrated in [Fig.03](#fig:nfe).
 We do not compare with MeanFlow for the text2mel task, as **F5-TTS** requires training with a batch size of 1 due to JVP overhead.
-Performance of MeanFlow is discussed in Section~[sec:token2mel](#sec:token2mel).
+Performance of MeanFlow is discussed in "Results on Token2Mel Task" section.
 
 > <a id="fig:nfe">![](imgs/NFE.pdf)</a>
 >
-> NFE vs. WER (\%) and SIM-o for the Flow Matching teacher and ***IntMeanFlow*** student models
+> Fig.03: NFE vs. WER (\%) and SIM-o for the Flow Matching teacher and ***IntMeanFlow*** student models
 
 #### Effectiveness of the O3S Algorithm
 
@@ -249,12 +250,13 @@ O3S consistently leads to improvements in both subjective and objective metrics 
 
 #### Impact of Teacher NFE on Training Time and Performance
 
-Using a larger teacher NFE during distillation can significantly increase training time, as shown in Table~[tab:train_time](#tab:train_time).
+Using a larger teacher NFE during distillation can significantly increase training time, as shown in [Tab.03](#tab:train_time).
 To examine the trade-off between teacher NFE and student performance, we conduct ablation experiments.
 A comparison of lines 10, 11, and 12 on *test-en*, and lines 18, 19, and 20 on *test-zh*, reveals that while a smaller teacher NFE results in minimal degradation in subjective metrics, objective metrics show noticeable performance loss, which is a common challenge in TTS evaluation.
 Synthesized speech from lines 10 and 20 demonstrates unnatural pronunciation and degraded fluency due to the excessively small teacher NFE.
 
 > <a id="tab:train_time"></a>
+>
 > Tab.03: Teacher NFE and training time per step.
 
 #### Impact of Teacher Size on Student Performance
