--- a/Models/FlowMatching/2023.09.10_VoiceFlow.md
+++ b/Models/FlowMatching/2023.09.10_VoiceFlow.md
@@ -16,8 +16,8 @@
   - [Github](https://github.com/X-LANCE/VoiceFlow-TTS)
   - [Demo](https://cantabile-kwok.github.io/VoiceFlow/)
 - 文件:
-  - [ArXiv v2](_PDF/2024.01.16_2309.05027v2__VoiceFlow__Efficient_Text-to-Speech_with_Rectified_Flow_Matching.pdf)
-  - [ArXiv v3](_PDF/2024.09.01_2309.05027v3__VoiceFlow__Efficient_Text-to-Speech_with_Rectified_Flow_Matching.pdf)
+  - [ArXiv v2](PDF/2024.01.16_2309.05027v2__VoiceFlow__Efficient_Text-to-Speech_with_Rectified_Flow_Matching.pdf)
+  - [ArXiv v3](PDF/2024.09.01_2309.05027v3__VoiceFlow__Efficient_Text-to-Speech_with_Rectified_Flow_Matching.pdf)
   - [Publication] #TODO
 
 </details>
@@ -272,38 +272,38 @@ We believe that the potential of flow matching in TTS research has yet to be dis
 ## 参考文献
 
 [^Binkowski2019GAN-TTS]: [GAN-TTS](../Vocoder/2019.09.25_GAN-TTS.md)
-[^Kim2021VITS]: [VITS](../E2E/2021.06.11_VITS.md)
-[^Kim2020Glow-TTS]: [Glow-TTS](../Acoustic/2020.05.22_Glow-TTS.md)
+[^Kim2021VITS]: [**VITS**: Conditional Variational Autoencoder with Adversarial Learning for End-to-End Text-to-Speech](../E2E/2021.06.11_VITS.md). ArXiv:2106.06103/ICML2021.
+[^Kim2020Glow-TTS]: [**Glow-TTS**: A Generative Flow for Text-to-Speech via Monotonic Alignment Search](../Acoustic/2020.05.22_Glow-TTS.md). ArXiv:2005.11129v2/NeurIPS2020.
 [^Valle2021Flowtron]: [Flowtron](../Acoustic/2020.05.12_Flowtron.md)
 [^Du2022VQTTS]: [VQTTS](../E2E/2022.04.02_VQTTS.md)
 [^Du2023TN-VQTTS]: [TN-VQTTS](../E2E/2023.08.24_TN-VQTTS.md)
-[^Popov2021Grad-TTS]: [Grad-TTS](../Acoustic/2021.05.13_Grad-TTS.md)
+[^Popov2021Grad-TTS]: [**Grad-TTS**: A Diffusion Probabilistic Model for Text-to-Speech](../Acoustic/2021.05.13_Grad-TTS.md). ArXiv:2105.06337v2/ICML2021.
 [^Liu2022DiffSinger]: [DiffSinger](../-SVS/2021.05.06_Diffsinger.md)
 [^Liu2023DiffVoice]: [DiffVoice](../Diffusion/2023.04.23_DiffVoice.md)
-[^Du2023UniCATS]: [UniCATS](../Diffusion/2023.06.13_UniCATS.md)
+[^Du2023UniCATS]: [**UniCATS**: A Unified Context-Aware Text-to-Speech Framework with Contextual VQ-Diffusion and Vocoding](../Diffusion/2023.06.13_UniCATS.md). ArXiv:2306.07547v6/AAAI2024.
 [^Kim2022Guided-TTS]: [Guided-TTS](../Diffusion/2021.11.23_Guided-TTS.md)
 [^Guo2023EmoDiff]: [EmoDiff](../Diffusion/2022.11.17_EmoDiff.md)
 [^Tae2022EdiTTS]: [EdiTTS](../Diffusion/2021.10.06_EdiTTS.md)
 [^Dhariwal2021GuidedDiffusion]: [Diffusion Models Beat GANs on Image Synthesis](../_Basis/2021.05.11_Guided_Diffusion.md)
-[^Vovk2022FastGrad-TTS]: [Fast Grad-TTS](../Acoustic/2022.09.18_Fast_Grad-TTS.md)
+[^Vovk2022FastGrad-TTS]: [**Fast Grad-TTS**: Towards Efficient Diffusion-Based Speech Generation on CPU](../Acoustic/2022.09.18_Fast_Grad-TTS.md). InterSpeech2022.
 [^Popov2022DiffVC]: [DiffVC](../-VC/2021.09.28_Diff-VC.md)
 [^Salimans2022Progressive]: [Progressive Distillation](../Diffusion/_2022.02.01_Progressive_Distillation.md)
 [^Xiao2022DenoisingDiffusionGAN]: [Denoising Diffusion GAN](../_Basis/2021.12.15_Denoising_Diffusion_GAN.md)
 [^Huang2022FastDiff]: [FastDiff](../Vocoder/2022.04.21_FastDiff.md)
 [^Lam2022BDDM]: [BDDM](../Diffusion/2022.03.25_BDDM.md)
-[^Huang2022ProDiff]: [ProDiff](../Diffusion/2022.07.13_ProDiff.md)
+[^Huang2022ProDiff]: [**ProDiff**: Progressive Fast Diffusion Model For High-Quality Text-to-Speech](../Diffusion/2022.07.13_ProDiff.md). ArXiv:2207.06389v1/ACM Multimedia 2022.
 [^Song2021DDIM]: [DDIM](../Diffusion/_2020.10.06_DDIM.md)
 [^Chen2023LightGrad]: [LightGrad](../Diffusion/2023.08.31_LightGrad.md)
 [^Lu2022DPM-Solver]: [DPM-Solver](../Diffusion/_2022.06.02_DPM-Solver.md)
-[^Ye2023CoMoSpeech]: [CoMoSpeech](../Diffusion/2023.05.11_CoMoSpeech.md)
-[^Song2023ConsistencyModel]: [Consistency Model](../Diffusion/2023.03.02_ConsistencyModel.md)
-[^Lipman2022FM]: [Flow Matching](_2022.10.06_Flow_Matching.md)
-[^Liu2022RectifiedFlow]: [Rectified Flow](_2022.09.07_RectifiedFlow.md)
+[^Ye2023CoMoSpeech]: [**CoMoSpeech**: One-Step Speech and Singing Voice Synthesis via Consistency Model](../Consistency/2023.05.11_CoMoSpeech.md). ArXiv:2305.06908v4/ACM MM2023.
+[^Song2023CM]: [**CM**: Consistency Models](../Consistency/_2023.03.02_CM.md). ArXiv:2303.01469v2/ICML2023.
+[^Lipman2022FM]: [**FM**: Flow Matching for Generative Modeling](_2022.10.06_Flow_Matching.md). ArXiv:2210.02747v2.
+[^Liu2022RectifiedFlow]: [**RectifiedFlow**: Flow Straight and Fast: Learning to Generate and Transfer Data with Rectified Flow](_2022.09.07_RectifiedFlow.md). ArXiv:2209.03003v1.
 [^Tong2023CFM]: [CFM](_2023.02.01_Conditional_Flow_Matching.md)
-[^Le2023VoiceBox]: [VoiceBox](2023.06.23_Voicebox.md)
+[^Le2023VoiceBox]: [**VoiceBox**: Text-Guided Multilingual Universal Speech Generation at Scale](2023.06.23_Voicebox.md). ArXiv:2306.15687/NeurIPS2023Poster.
 [^Liu2023LinDiff]: [LinDiff](../Vocoder/2023.06.09_LinDiff.md)
-[^Ito2017LJSpeech]: [LJSpeech](../../Datasets/2017.07.05_LJSpeech.md)
-[^Zen2019LibriTTS]: [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md)
+[^Ito2017LJSpeech]: [**LJSpeech**: The LJ Speech Dataset](../../Datasets/2017.07.05_LJSpeech.md). .
+[^Zen2019LibriTTS]: [**LibriTTS**: A Corpus Derived from LibriSpeech for Text-to-Speech](../../Datasets/2019.04.05_LibriTTS.md). ArXiv:1904.02882v1/InterSpeech2019.
 [^Povey2011Kaldi]: [Kaldi](../Toolkits/2011.00.00_Kaidi.md)
-[^Kong2020HiFi-GAN]: [HiFi-GAN](../Vocoder/2020.10.12_HiFi-GAN.md)
+[^Kong2020HiFi-GAN]: [**HiFi-GAN**: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis](../Vocoder/2020.10.12_HiFi-GAN.md). ArXiv:2010.05646/NeurIPS2020.
 [^Lo2019MOSNet]: [MOSNet](../../Evaluations/MOSNet.md)
