--- a/Models/FlowMatching/2025.10.09_IntMeanFlow.md
+++ b/Models/FlowMatching/2025.10.09_IntMeanFlow.md
@@ -88,7 +88,7 @@ However, its dependence on Jacobian-vector products (JVPs) to compute the time d
 
 ## 3·Methodology
 
-### IntMeanFlow: MeanFlow Distillation via Integral Velocity
+### IntMeanFlow: MeanFlow Distillation via Integral Velocity: 通过积分速度实现 MeanFlow 蒸馏
 
 ***IntMeanFlow*** extends the principles of MeanFlow by focusing on learning the averaged velocity over a time interval, rather than the instantaneous velocity at individual time steps.
 This approach retains the coarse-to-fine nature of MeanFlow, where smaller intervals are emphasized during training to capture fine-grained details, while broader temporal dynamics are learned more gradually.
@@ -152,11 +152,11 @@ $$
 where $u_{\text{student}}(z_t, t, r)$ is the predicted velocity from the student model, and $\bar{v}_{\text{teacher}}(z_t, t, r)$ is the target velocity from the teacher.
 The student model learns to predict the averaged velocity by following the teacher’s guidance, which approximates the integral of the instantaneous velocity via iterative sampling.
 
-> <a id="fig:placeholder">![](imgs/imf.pdf)</a>
+> <a id="fig:placeholder">![](Images/2025.10.09_IntMeanFlow_Fig.01.png)</a>
 >
 > Fig.01: Illustration of ***IntMeanFlow***: The student model learns the averaged velocity from the instantaneous velocities provided by the teacher model at multiple states.
 
-### Optimal Step Sampling Searching~(O3S)
+### Optimal Step Sampling Searching (O3S)
 
 In flow-based speech generation, previous work has shown that denser sampling at noisier steps leads to improved speech quality (**F5-TTS**[^Chen2024F5-TTS], **Fast F5-TTS**[^Zheng2025FastF5-TTS]).
 To satisfy varying NFE requirements, earlier methods have used continuous functions or hard-coded discrete step schedules.
@@ -210,7 +210,7 @@ For F5-TTS, we use the **Seed-TTS**[^Anastassiou2024Seed-TTS] test set ([Github]
 
 Performance is evaluated on a cross-sentence task using a variety of metrics.
 For objective evaluation, we report Word Error Rate (WER) and SIM-o (speaker similarity).
-WER is computed using Whisperlarge-v3 for English transcription and **Paraformer**-zh[^Gao2022Paraformer] for Chinese transcription.
+WER is computed using Whisper-Large-V3 for English transcription and **Paraformer**-zh[^Gao2022Paraformer] for Chinese transcription.
 For SIM-o, we extract speaker embeddings using a **WavLM**-based[^Chen2021WavLM] speaker verification model and compute the cosine similarity between synthesized and prompt human speech.
 Real-time factors(RTF) are measured on NVIDIA A100 GPU.
 For CMOS, speech quality is rated from 3 (worse) to + 3 (better) compared to human reference.
