--- a/Models/FlowMatching/2025.08.08_MeanAudio.md
+++ b/Models/FlowMatching/2025.08.08_MeanAudio.md
@@ -21,3 +21,17 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+Recent developments in diffusion- and flow- based models have significantly advanced Text-to-Audio Generation (TTA). 
+While achieving great synthesis quality and controllability, current TTA systems still suffer from slow inference speed, which significantly limits their practical applicability.
+
+This paper presents MeanAudio, a novel MeanFlow-based model tailored for fast and faithful text-to-audio generation. 
+Built on a Flux-style latent transformer, MeanAudio regresses the average velocity field during training, enabling fast generation by mapping directly from the start to the endpoint of the flow trajectory.
+By incorporating classifier-free guidance (CFG) into the training target, MeanAudio incurs no additional cost in the guided sampling process. 
+To further stabilize training, we propose an instantaneous-to-mean curriculum with flow field mix-up, which encourages the model to first learn the foundational instantaneous dynamics, and then gradually adapt to mean flows. 
+This strategy proves critical for enhancing training efficiency and generation quality.
+Experimental results demonstrate that MeanAudio achieves state-of-the-art performance in single-step audio generation. 
+Specifically, it achieves a real time factor (RTF) of 0.013 on a single NVIDIA RTX 3090, yielding a 100x speedup over SOTA diffusion-based TTA systems. 
+Moreover, MeanAudio also demonstrates strong performance in multi-step generation, enabling smooth and coherent transitions across successive synthesis steps.
