--- a/Models/FlowMatching/2025.08.08_MeanAudio.md
+++ b/Models/FlowMatching/2025.08.08_MeanAudio.md
@@ -87,3 +87,36 @@ This scheme also proves critical for improving training efficiency and generatio
 We present MeanAudio, a fast and faithful text-to-audio generator that achieves SOTA performance in single-step audio synthesis, while also delivering strong results in multi-step generation.
 To promote further research, we will open-source all the training codes and model weights. 
 % Our architectural design, experimental results, and ablation studies provide a foundation for building stronger and faster TTA models using average velocity fields.
+
+## 2·Related Work
+
+### Text to Audio Generation
+
+Text to Audio Generation (TTA) focuses on generating sound based on text inputs.
+
+Current TTA models are often based on the Latent Diffusion Model (LDM) [^Rombach2022High-Resolution] architecture.
+
+Among all, AudioLDM [^Liu2023AudioLDM] pioneered this by training a U-Net to perform denoising conditioned on CLAP [^Wu2023Large-Scale] embeddings.
+
+Tango [^Ghosal2023Text-to-Audio] further improves the instruction following abilities by using the Large Language Model (LLM) FLAN-T5 [^Chung2024Scaling] as the text encoder.
+
+More recently, Stable-Audio-Open [^Evans2025Stable] adopted the Diffusion Transformer (DiT) [^Peebles2023Scalable] to generate variable-length, full-band audio samples.
+
+Meanwhile, LAFMA [^Guan2024Lafma] and TangoFlux [^Hung2024TangoFlux] integrated Flow Matching [^Liu2023Flow] to improve the efficiency and fidelity of audio generation.  
+
+Additionally, recent work has explored Reinforcement Learning (RL) [^Liao2024Baton], [^Majumder2024Tango], [^Wang2025T2a-Feedback] and Retrieval-Augmented Generation (RAG) [^Yuan2024Retrieval-Augmented], [^Yang2024Audiobox] to enhance generation controllability and output quality.
+
+While these models achieve high fidelity and controllability, they often suffer from slow inference due to the iterative sampling process inherent to diffusion- and flow-based models.
+
+### TTA with Inference Acceleration
+
+To accelerate TTA inference, ConsistencyTTA first integrates Consistency Distillation [^Song2023Consistency] on TTA Latent Diffusion Models, where a teacher model, Tango [^Majumder2024Tango] provides supervision to train a distilled few-step student generator.
+
+Subsequently, AudioLCM [^Liu2024AudioLCM] enriches this framework by employing a multi-step Ordinary Differential Equation (ODE) solver, while SoundCTM [^Saito2025SoundCTM] introduces a novel feature distance to enable flexible single-step and multi-step generation. 
+In parallel, Presto [^Novack2025Presto!] proposes a dual-faceted distillation strategy that reduces both the number of sampling steps and model parameters to improve inference efficiency.
+
+FlashAudio [^Liu2025FlashAudio] and AudioTurbo [^Zhao2025AudioTurbo] explored the use of Rectified Flow [^Liu2023Flow] and Rectified Diffusion [^Wang2024Rectified] to learn straight generative paths for rapid audio synthesis.
+
+Meanwhile, Stable-Audio-Small [^Novack2025Fast] employs contrastive post-training with adversarial loss to construct a compact few-step generator.
+
+In this work, we investigate the use of MeanFlow to develop a TTA model that achieves strong performance in both single-step and multi-step generation.
