--- a/Models/FlowMatching/2025.08.08_MeanAudio.md
+++ b/Models/FlowMatching/2025.08.08_MeanAudio.md
@@ -120,3 +120,60 @@ FlashAudio [^Liu2025FlashAudio] and AudioTurbo [^Zhao2025AudioTurbo] explored th
 Meanwhile, Stable-Audio-Small [^Novack2025Fast] employs contrastive post-training with adversarial loss to construct a compact few-step generator.
 
 In this work, we investigate the use of MeanFlow to develop a TTA model that achieves strong performance in both single-step and multi-step generation.
+
+## 3·Preliminaries
+
+### Conditional Flow Matching
+
+Flow Matching [^Liu2023Flow], [^Lipman2023Flow], [^Albergo2023Building] is a powerful generative model that learns to match the flows between two probabilistic distributions. 
+Given data $x \sim p_\text{data}(x)$, prior $\epsilon \sim p_\text{prior}(\epsilon)$, the optimal transport flow path can be constructed as: $x_t = (1-t)x + t \epsilon$, and the conditional velocity is thus given by $v_t = \frac{dx_t}{dt} = \epsilon - x$.  
+
+At training time, the objective is to find a neural network $f_\theta$ which minimizes the conditional flow matching loss [^Lipman2023Flow]: 
+
+$$
+\label{eq:fm_loss}
+\mathcal{L}_\text{CFM} = \mathbb{E}_{t, x, \epsilon}\|f_\theta (t, x_t) - v_t\|^2
+$$
+
+During sampling, we randomly draw noise $\epsilon$ from $p_\text{prior}$ and solve the ordinary differential equation (ODE) defined below:
+$$
+dx_t = -f_\theta (t, x_t)dt
+$$
+The solution is thus given by $x_r = x_t - \int_r^tf_\theta(\tau, x_\tau)d\tau$, where $r$ denotes another time step. 
+During implementation, we can use numerical methods (e.g.
+
+Euler Method) to approximate this integration. 
+
+### Mean Flows for Generative Modeling
+
+To accelerate the inference speed of Flow Matching, Mean Flows [^Geng2025Mean] proposed to regress the average velocity field during training, allowing high-quality single-step generation. 
+Specifically, given a time interval $[r, t]$, the average velocity within it is defined as:
+$u(x_t, r, t) \triangleq \frac{1}{t-r}\int_r^t v(x_\tau, \tau) d\tau$. 
+By differentiating both sides with respect to $t$ and re-arranging terms, we obtain the *Mean Flow Identity*, which describes the relation between $v$ and $u$: 
+
+$$
+
+u(x_t, r, t) = v_t - (t-r)\frac{d}{dt}u(x_t, r, t)
+$$
+
+We then encourage $f_\theta$ to satisfy this identity by minimizing the mean flow objective: 
+
+$$
+\label{eq:mf_loss}
+\mathcal{L}_\text{MF}= \mathbb{E}_{t, r, x, \epsilon} \| f_\theta(x_t, r, t) - \text{sg}(u_\text{tgt})\|^2 
+$$
+
+Where $u_\text{tgt}=v_t  - (t-r)\frac{d}{dt}f_\theta(x_t, r, t)$, and $\text{sg}(\cdot)$ denotes the stop-gradient operation.  
+Note that this total derivative can be expanded by its partial components, corresponding to a Jacobian-Vector Product (JVP): 
+$\frac{d}{dt}f_\theta(x_t, r, t) = v_t\partial_x f_\theta+ \partial_t f_\theta$. 
+When $r=t$, the mean flow objective becomes the vanilla flow matching objective. 
+
+During sampling, the time integral in CFM can be replaced by the average velocity, leading to: 
+$$
+x_r = x_t - (t-r)f_\theta(x_t, r, t)
+$$
+In particular, in single-step generation, we have: 
+$
+x_0 = x_1 - f_\theta(x_1, 0, 1)
+$
+where $x_1 = \epsilon \sim p_\text{prior}(\epsilon)$. 
